Bug 283661 - kdesdk ftbfs on powerpc
Summary: kdesdk ftbfs on powerpc
Status: RESOLVED FIXED
Alias: None
Product: okteta
Classification: Applications
Component: Structures Tool (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Alex Richardson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-09 18:29 UTC by Philip Muškovac
Modified: 2011-10-09 21:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
no_structures_tool.diff (1.29 KB, patch)
2011-10-09 18:33 UTC, Philip Muškovac
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Philip Muškovac 2011-10-09 18:29:18 UTC
Version:           unspecified (using KDE 4.7.1) 
OS:                Linux

See build failure on https://bugs.launchpad.net/ubuntu/+source/kdesdk/+bug/852430

Reproducible: Always

Steps to Reproduce:
Try to build on Kubuntu oneiric powerpc

Actual Results:  
Should build

Expected Results:  
Doesn't build

The attached patch fixes the issue.
Origin: Matthias Klose <doko@ubuntu.com>
Comment 1 Philip Muškovac 2011-10-09 18:33:25 UTC
Created attachment 64368 [details]
no_structures_tool.diff

Actually attaching the patch...
Comment 2 Alex Richardson 2011-10-09 21:57:38 UTC
SVN commit 1258090 by arichardson:

fix build on non-little-endian systems

BUG: 283661

 M  +4 -0      mainwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1258090
Comment 3 Alex Richardson 2011-10-09 21:58:18 UTC
This should properly fix the issue, please test and reopen if it still does not compile