fix build on non-little-endian systems

BUG: 283661

svn path=/trunk/KDE/kdesdk/okteta/; revision=1258090